--- a/package.json
+++ b/package.json
@@ -5,9 +5,15 @@
         "dev": "vite",
         "build": "vite build"
     },
-    "devDependencies": {
+    "dependencies": {
+        "@vitejs/plugin-vue": "^4.2.3",
         "axios": "^1.4.0",
         "laravel-vite-plugin": "^0.7.5",
-        "vite": "^4.0.0"
+        "pinia": "^2.1.3",
+        "typescript": "^5.0.4",
+        "vite": "^4.0.0",
+        "vue": "^3.3.4",
+        "vue-router": "^4.2.2",
+        "vue-tsc": "^1.6.5"
     }
 }
