--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "typescript": "^5.0.4",
         "vite": "^4.0.0",
         "vue": "^3.3.4",
+        "vue-i18n": "^9.2.2",
         "vue-router": "^4.2.2",
         "vue-tsc": "^1.6.5"
     }
