Removed unnecessary html code and created reused components

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "build": "vite build"
     },
     "dependencies": {
+        "@mentorkadriu/vue-tiny-slider": "^0.1.8",
         "@vitejs/plugin-vue": "^4.2.3",
         "axios": "^1.4.0",
         "bootstrap": "^4.6.2",
