--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "ext-pdo": "*",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
+        "laravel/passport": "^11.8",
         "laravel/tinker": "^2.8",
         "stevebauman/location": "^6.6"
     },
