--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     },
     "dependencies": {
         "@mentorkadriu/vue-tiny-slider": "^0.1.8",
+        "@types/vuelidate": "^0.7.18",
         "@vitejs/plugin-vue": "^4.2.3",
+        "@vuelidate/core": "^2.0.2",
+        "@vuelidate/validators": "^2.0.2",
         "axios": "^1.4.0",
         "bootstrap": "^4.6.2",
         "laravel-vite-plugin": "^0.7.5",
